--- a/package.json
+++ b/package.json
@@ -1,29 +1,7 @@
 {
-  "name": "shoppe-ecommerce",
-  "version": "1.0.0",
-  "description": "Modern Fashion eCommerce Store",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build --mode production",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.0",
-    "react-icons": "^5.0.1"
-  },
-  "devDependencies": {
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "typescript": "^5.3.3",
-    "vite": "^5.1.0"
-  },
-  "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=9.0.0"
-  }
+  "framework": "vite",
+  "buildCommand": "npx vite build",
+  "devCommand": "npx vite",
+  "installCommand": "npm install",
+  "outputDirectory": "dist"
 }
