--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -1,14 +1,12 @@
 {
   "name": "shoppe-ecommerce",
   "version": "1.0.0",
-  "description": "Modern Fashion eCommerce Store",
   "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
+    "build": "npx vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -17,15 +15,7 @@
     "react-icons": "^5.0.1"
   },
   "devDependencies": {
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.0.0",
-    "@typescript-eslint/parser": "^7.0.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "typescript": "^5.3.3",
     "vite": "^5.1.0"
   }
 }
